--- a/portfolio/B19/area.html
+++ b/portfolio/B19/area.html
@@ -140,111 +140,143 @@
 				</div>
 			</div>
 		</header>
-		<div class="topp">
-			<div class="topp__container">
-				<div class="topp__body">
-					<div class="topp__row row-topp">
-						<div class="row-topp__item item-topp left">
-							<div class="item-topp__body">
-								<div class="item-topp__text">
-									<p>Наша компанія пропонує різноманітні послуги, щоб задовольнити потреби вашого проекту, починаючи
-										від зустрічей для співпраці й закінчуючи розрізанням стрічки й не тільки. Ми віримо, що кожен
-										проект унікальний, і можемо налаштувати наш підхід відповідно до вашого конкретного проекту.
-										Незважаючи на те, що ми перебуваємо в авангарді та спеціалізуємося на розробці дизайну, ми добре
-										знайомі з рядом методів доставки та впевнені, що зможемо знайти процес, який найкраще допоможе
-										вам досягти ваших цілей.</p>
-								</div>
-							</div>
+		<div class="toparea">
+			<div class="toparea__container">
+				<div class="toparea__body">
+					<div class="toparea__title title">
+						<h1><span class="yellow-title">Експериментальний</span> <span class="yellow-title">майданчик</span></h1>
+					</div>
+					<div class="toparea__block">
+						<div class="toparea__text">
+							<p>Наша компанія займається власним виробництвом товарного бетону, готового бетону, готового розчину
+								цементного, бетону кладки марок М100, М150, М200, М250, М350, М400, М450, М500, М600, М700, М800, М900
+							</p>
 						</div>
-						<div class="row-topp__item item-topp right">
-							<div class="item-topp__body right">
-								<div class="item-topp__title">
-									<h1>Онлайн-каталог</h1>
-								</div>
-								<div class="item-topp__image"><a href="#" class="item-topp__link"><img src="img/topp/catalog.jpg" alt="Catalog"></a></div>
-							</div>
+						<div class="toparea__image">
+							<img src="img/toparea/image.png" alt="image">
+						</div>
+					</div>
+					<div class="toparea__label label-toparea">
+						<div class="label-toparea__label">
+							<h4>Напрями співробітництва</h4>
+						</div>
+						<div class="label-toparea__text">
+							<p>Сторони в межах своєї компетенції, мають намір розвивати співпрацю за такими напрямками (але не
+								обмежуватись ними):</p>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
 		<main class="page">
-			<div class="productions">
-				<div class="productions__container">
-					<div class="productions__body">
-						<div class="productions__row row-productions">
-							<div class="row-productions__item item-productions">
-								<a href="productionb.html">
-									<div class="item-productions__body">
-										<div class="item-productions__image">
-											<img src="img/productions/item1.jpg" alt="">
-											<div class="item-productions__textblock textblock-productions">
-												<div class="textblock-productions__body">
-													<div class="textblock-productions__text">
-														<h3>Виробництво панелей</h3>
-													</div>
-												</div>
-											</div>
-										</div>
+			<div class="benefitsarea">
+				<div class="benefitsarea__container">
+					<div class="benefitsarea__body">
+						<div class="benefitsarea__row row-benefitsarea">
+							<div class="row-benefitsarea__item item-benefitsarea item1">
+								<div class="item-benefitsarea__body">
+									<div class="item-benefitsarea__number">
+										<p>1</p>
 									</div>
-								</a>
-							</div>
-							<div class="row-productions__item item-productions">
-								<a href="productionpan.html">
-									<div class="item-productions__body">
-										<div class="item-productions__image">
-											<img src="img/productions/item02.jpg" alt="">
-											<div class="item-productions__textblock textblock-productions">
-												<div class="textblock-productions__body">
-													<div class="textblock-productions__text">
-														<h3>Виробництво панелей</h3>
-													</div>
-												</div>
-											</div>
-										</div>
+									<div class="item-benefitsarea__text">
+										<p>Створення нових видів будівельних матеріалів, зокрема, бетонів із унікальними або підвищеними
+											експлуатаційними властивостями.
+										</p>
 									</div>
-								</a>
-							</div>
-							<div class="row-productions__item item-productions">
-								<a href="#">
-									<div class="item-productions__body">
-										<div class="item-productions__image">
-											<img src="img/productions/item03.jpg" alt="">
-											<div class="item-productions__textblock textblock-productions">
-												<div class="textblock-productions__body">
-													<div class="textblock-productions__text">
-														<h3>Залізобетонні конструкції</h3>
-													</div>
-												</div>
-											</div>
-										</div>
+									<div class="item-benefitsarea__image">
+										<img src="img/benefitsarea/figure.svg" alt="">
 									</div>
-								</a>
+								</div>
 							</div>
-							<div class="row-productions__item item-productions">
-								<a href="#">
-									<div class="item-productions__body">
-										<div class="item-productions__image">
-											<img src="img/productions/item04.jpg" alt="">
-											<div class="item-productions__textblock textblock-productions">
-												<div class="textblock-productions__body">
-													<div class="textblock-productions__text">
-														<h3>Виробництво меблів</h3>
-													</div>
-												</div>
-											</div>
-										</div>
+							<div class="row-benefitsarea__item item-benefitsarea item2">
+								<div class="item-benefitsarea__body">
+									<div class="item-benefitsarea__number">
+										<p>2</p>
 									</div>
-								</a>
+									<div class="item-benefitsarea__text">
+										<p>Створення зовнішнього пункту проведення незалежного контролю якості сировинних матеріалів, що
+											надходять на виробництво,
+											а також готової будівельної продукції.
+										</p>
+									</div>
+									<div class="item-benefitsarea__image">
+										<img src="img/benefitsarea/figure.svg" alt="">
+									</div>
+								</div>
 							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="videop">
-				<div class="videop__container">
-					<div class="videop__body">
-						<div poster="https://zverzor.github.io/aloha/portfolio/B19/video/poster.jpg" class="videop__video"><video controls src="https://zverzor.github.io/aloha/portfolio/B19/video/production.mp4" codecs="h264" type='video/mp4'></video>
+							<div class="row-benefitsarea__item item-benefitsarea item3">
+								<div class="item-benefitsarea__body">
+									<div class="item-benefitsarea__number">
+										<p>3</p>
+									</div>
+									<div class="item-benefitsarea__text">
+										<p>Сертифікація будівельних матеріалів, виробів і конструкцій.
+										</p>
+									</div>
+									<div class="item-benefitsarea__image">
+										<img src="img/benefitsarea/figure.svg" alt="">
+									</div>
+								</div>
+							</div>
+							<div class="row-benefitsarea__item item-benefitsarea item4">
+								<div class="item-benefitsarea__body">
+									<div class="item-benefitsarea__number">
+										<p>4</p>
+									</div>
+									<div class="item-benefitsarea__text">
+										<p>Проєктування, розробка архітектурно-планувальних рішень та дизайну будівельних об’єктів, зокрема
+											об’єктів панельного домобудування та модульних містечок із збірних залізобетонних конструкцій.
+										</p>
+									</div>
+									<div class="item-benefitsarea__image">
+										<img src="img/benefitsarea/figure.svg" alt="">
+									</div>
+								</div>
+							</div>
+							<div class="row-benefitsarea__item item-benefitsarea item5">
+								<div class="item-benefitsarea__body">
+									<div class="item-benefitsarea__number">
+										<p>5</p>
+									</div>
+									<div class="item-benefitsarea__text">
+										<p>Організація спільних конкурсів студентських робіт та творчих конкурсів.
+										</p>
+									</div>
+									<div class="item-benefitsarea__image">
+										<img src="img/benefitsarea/figure.svg" alt="">
+									</div>
+								</div>
+							</div>
+							<div class="row-benefitsarea__item item-benefitsarea item6">
+								<div class="item-benefitsarea__body">
+									<div class="item-benefitsarea__number">
+										<p>6</p>
+									</div>
+									<div class="item-benefitsarea__text">
+										<p>Спільне виробництво продукції на основі розроблених рецептур та проєктних рішень та просування
+											такої продукції на будівельному ринку.
+										</p>
+									</div>
+									<div class="item-benefitsarea__image">
+										<img src="img/benefitsarea/figure.svg" alt="">
+									</div>
+								</div>
+							</div>
+							<div class="row-benefitsarea__item item-benefitsarea item7">
+								<div class="item-benefitsarea__body">
+									<div class="item-benefitsarea__number">
+										<p>7</p>
+									</div>
+									<div class="item-benefitsarea__text">
+										<p>Організація спільних інформаційних проектів різного рівня (проведення конференцій, семінарів,
+											виставок, організація науково-технічних видань та рекламних кампаній тощо)
+										</p>
+									</div>
+									<div class="item-benefitsarea__image">
+										<img src="img/benefitsarea/figure.svg" alt="">
+									</div>
+								</div>
+							</div>
 						</div>
 					</div>
 				</div>
