--- a/portfolio/B19/productionb.html
+++ b/portfolio/B19/productionb.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20220611092503">
+	<link rel="stylesheet" href="css/style.min.css?_v=20220611111016">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -67,7 +67,8 @@
 										</li>
 										<li class="menu__item"><a href="new.html" class="menu__link">Новини</a></li>
 										<li class="menu__item"><a href="eco.html" class="menu__link">Екологія</a></li>
-										<li class="menu__item"><a href="#" class="menu__link">Експериментальний майданчик</a></li>
+										<li class="menu__item"><a href="area.html" class="menu__link">Експериментальний майданчик</a>
+										</li>
 										<li class="menu__item"><a href="modules.html" class="menu__link">Модульні проєкти</a>
 											<div class="menu__arrow"></div>
 											<ul class="menu__sublist">
@@ -112,7 +113,7 @@
 											</li>
 											<li class="mobilemenu__item"><a href="new.html" class="mobilemenu__link">Новини</a></li>
 											<li class="mobilemenu__item"><a href="eco.html" class="mobilemenu__link">Екологія</a></li>
-											<li class="mobilemenu__item"><a href="#" class="mobilemenu__link">Експериментальний
+											<li class="mobilemenu__item"><a href="area.html" class="mobilemenu__link">Експериментальний
 													майданчик</a></li>
 											<li class="mobilemenu__item"><a href="modules.html" class="mobilemenu__link">Модульні
 													проєкти</a>
@@ -340,7 +341,7 @@
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20220611092503"></script>
+	<script src="js/app.min.js?_v=20220611111016"></script>
 </body>
 
 </html>
