--- a/portfolio/B19/index.html
+++ b/portfolio/B19/index.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20220611111016">
+	<link rel="stylesheet" href="css/style.min.css?_v=20220611131559">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -65,9 +65,13 @@
 										<li class="menu__item"><a href="production.html" class="menu__link">Виробництво</a>
 											<div class="menu__arrow"></div>
 											<ul class="menu__sublist">
-												<li class="menu__subitem"><a href="productionb.html" class="menu__sublink">Бетону</a></li>
+												<li class="menu__subitem"><a href="productionb.html" class="menu__sublink">Виробництво
+														бетону</a></li>
 												<li class="menu__subitem"><a href="productionpan.html" class="menu__sublink">Виробництво
 														панелей</a></li>
+												<li class="menu__subitem"><a href="#" class="menu__sublink">Залізобетонні конструкції</a>
+												</li>
+												<li class="menu__subitem"><a href="#" class="menu__sublink">Виробництво меблів</a></li>
 											</ul>
 										</li>
 										<li class="menu__item"><a href="new.html" class="menu__link">Новини</a></li>
@@ -83,7 +87,6 @@
 														панельні будинки</a></li>
 											</ul>
 										</li>
-										<li class="menu__item"><a href="#" class="menu__link">Контакти</a></li>
 									</ul>
 									<div class="menu__search"><img src="img/header/search-icon.svg" alt="Search"></div>
 								</nav>
@@ -112,8 +115,12 @@
 												<a href="production.html" class="mobilemenu__link">Виробництво</a>
 												<div class="menu__arrow"></div>
 												<ul class="mobilemenu__sublist">
-													<li class="mobilemenu__subitem"><a href="productionb.html" class="mobilemenu__link">Бетону</a></li>
+													<li class="mobilemenu__subitem"><a href="productionb.html" class="mobilemenu__link">Виробництво бетону</a></li>
 													<li class="mobilemenu__subitem"><a href="productionpan.html" class="mobilemenu__link">Виробництво панелей</a></li>
+													<li class="mobilemenu__subitem"><a href="#" class="mobilemenu__link">Залізобетонні
+															конструкції</a></li>
+													<li class="mobilemenu__subitem"><a href="#" class="mobilemenu__link">Виробництво
+															меблів</a></li>
 												</ul>
 											</li>
 											<li class="mobilemenu__item"><a href="new.html" class="mobilemenu__link">Новини</a></li>
@@ -131,7 +138,6 @@
 															панельні будинки</a></li>
 												</ul>
 											</li>
-											<li class="mobilemenu__item"><a href="#" class="mobilemenu__link">Контакти</a></li>
 										</ul>
 										<div class="mobilemenu__location"><img src="img/header/location-white.svg" alt="location">
 											м. Київ, вул. Бориспільська, 19
@@ -156,8 +162,11 @@
 							</div>
 							<div class="col-top-main__text">
 								<p>
-									Nor again is there anyone who loves or pursues or desires to obtain pain of itself, because it is
-									pain, but because occasionally circumstances
+									Об'єднана група компаній, що включає в себе виробництво
+									бетону, виробництво ЗБВ виробів та тришарових панелей,
+									проектування та будівництво будівель, вивчення новітніх технологій у
+									будівництві.
+									Прочитати нашу історію
 								</p>
 							</div>
 							<div class="col-top-main__button">
@@ -216,67 +225,10 @@
 					</div>
 				</div>
 			</div>
-			<div class="slider-top-main">
-				<div class="slider-top-main__container">
-					<div class="slider-top-main__body">
-						<div class="slider-top-main__slider swiper">
-							<div class="slider-top-main__wrapper swiper-wrapper">
-								<div class="slider-top-main__slide swiper-slide">
-									<div class="slide-slider-top-main__body">
-										<div class="slide-slider-top-main__gradient"></div>
-										<div class="slide-slider-top-main__image"><img src="img/slider-top-main/back-slide1.jpg" alt="background-slide">
-										</div>
-										<div class="slide-slider-top-main__text">
-											<p>НАША МІСІЯ - ПОБУДУВАТИ НОВУ УКРАЇНУ!</p>
-										</div>
-									</div>
-								</div>
-								<div class="slider-top-main__slide swiper-slide">
-									<div class="slide-slider-top-main__body">
-										<div class="slide-slider-top-main__gradient"></div>
-										<div class="slide-slider-top-main__image"><img src="img/slider-top-main/back-slide1.jpg" alt="background-slide">
-										</div>
-										<div class="slide-slider-top-main__text">
-											<p>НАША МІСІЯ - ПОБУДУВАТИ НОВУ УКРАЇНУ!</p>
-										</div>
-									</div>
-								</div>
-								<div class="slider-top-main__slide swiper-slide">
-									<div class="slide-slider-top-main__body">
-										<div class="slide-slider-top-main__gradient"></div>
-										<div class="slide-slider-top-main__image"><img src="img/slider-top-main/back-slide1.jpg" alt="background-slide">
-										</div>
-										<div class="slide-slider-top-main__text">
-											<p>НАША МІСІЯ - ПОБУДУВАТИ НОВУ УКРАЇНУ!</p>
-										</div>
-									</div>
-								</div>
-								<div class="slider-top-main__slide swiper-slide">
-									<div class="slide-slider-top-main__body">
-										<div class="slide-slider-top-main__gradient"></div>
-										<div class="slide-slider-top-main__image"><img src="img/slider-top-main/back-slide1.jpg" alt="background-slide">
-										</div>
-										<div class="slide-slider-top-main__text">
-											<p>НАША МІСІЯ - ПОБУДУВАТИ НОВУ УКРАЇНУ!</p>
-										</div>
-									</div>
-								</div>
-								<div class="slider-top-main__slide swiper-slide">
-									<div class="slide-slider-top-main__body">
-										<div class="slide-slider-top-main__gradient"></div>
-										<div class="slide-slider-top-main__image"><img src="img/slider-top-main/back-slide1.jpg" alt="background-slide">
-										</div>
-										<div class="slide-slider-top-main__text">
-											<p>НАША МІСІЯ - ПОБУДУВАТИ НОВУ УКРАЇНУ!</p>
-										</div>
-									</div>
-								</div>
-							</div>
-							<!-- Если нужна пагинация -->
-							<div class="swiper-pagination"></div>
-							<!-- Если нужна навигация (влево/вправо) -->
-							<button type="button" class="swiper-button-prev"></button>
-							<button type="button" class="swiper-button-next"></button>
+			<div class="videomain">
+				<div class="videomain__container">
+					<div class="videomain__body">
+						<div poster="https://zverzor.github.io/aloha/portfolio/B19/video/poster.jpg" class="videomain__video"><video controls src="https://zverzor.github.io/aloha/portfolio/B19/video/videomain.mp4" codecs="h264" type='video/mp4'></video>
 						</div>
 					</div>
 				</div>
@@ -286,9 +238,9 @@
 					<div class="newlvl__body">
 						<div class="newlvl__frame"></div>
 						<div class="newlvl__text">
-							<p>Nor again is there anyone who loves or pursues or desires to obtain pain of itself, because it is pain,
-								but because occasionally circumstances Nor again is there anyone who loves or pursues or desires to
-								obtain pain of itself, because it is pain, but because occasionally circumstances </p>
+							<p>Ми любимо нашу країну ! Віримо у велич нашої нації. Використовуючи
+								останні світові досягнення в галузі будівництва ми хочемо принести
+								користь нашому суспільству.</p>
 						</div>
 						<div class="newlvl__title"><span class="yellow-title">Б19 - НОВИЙ РІВЕНЬ </span><span class="yellow-title">МЕНЕДЖМЕНТУ</span></div>
 						<div class="newlvl__row row-newlvl">
@@ -343,22 +295,52 @@
 								</div>
 								<div class="slider-main__slide swiper-slide">
 									<div class="slide-slider-main__body">
-										<img src="img/slider-main/slide1.jpg" alt="">
+										<img src="img/slider-main/slide2.jpg" alt="">
 									</div>
 								</div>
 								<div class="slider-main__slide swiper-slide">
 									<div class="slide-slider-main__body">
-										<img src="img/slider-main/slide1.jpg" alt="">
+										<img src="img/slider-main/slide3.jpg" alt="">
 									</div>
 								</div>
 								<div class="slider-main__slide swiper-slide">
 									<div class="slide-slider-main__body">
-										<img src="img/slider-main/slide1.jpg" alt="">
+										<img src="img/slider-main/slide4.jpg" alt="">
 									</div>
 								</div>
 								<div class="slider-main__slide swiper-slide">
 									<div class="slide-slider-main__body">
-										<img src="img/slider-main/slide1.jpg" alt="">
+										<img src="img/slider-main/slide5.jpg" alt="">
+									</div>
+								</div>
+								<div class="slider-main__slide swiper-slide">
+									<div class="slide-slider-main__body">
+										<img src="img/slider-main/slide6.jpg" alt="">
+									</div>
+								</div>
+								<div class="slider-main__slide swiper-slide">
+									<div class="slide-slider-main__body">
+										<img src="img/slider-main/slide7.png" alt="">
+									</div>
+								</div>
+								<div class="slider-main__slide swiper-slide">
+									<div class="slide-slider-main__body">
+										<img src="img/slider-main/slide8.jpg" alt="">
+									</div>
+								</div>
+								<div class="slider-main__slide swiper-slide">
+									<div class="slide-slider-main__body">
+										<img src="img/slider-main/slide9.jpg" alt="">
+									</div>
+								</div>
+								<div class="slider-main__slide swiper-slide">
+									<div class="slide-slider-main__body">
+										<img src="img/slider-main/slide10.png" alt="">
+									</div>
+								</div>
+								<div class="slider-main__slide swiper-slide">
+									<div class="slide-slider-main__body">
+										<img src="img/slider-main/slide11.png" alt="">
 									</div>
 								</div>
 
@@ -425,7 +407,7 @@
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20220611111016"></script>
+	<script src="js/app.min.js?_v=20220611131559"></script>
 </body>
 
 </html>
