--- a/portfolio/B19/production.html
+++ b/portfolio/B19/production.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20220611111016">
+	<link rel="stylesheet" href="css/style.min.css?_v=20220611131559">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -60,9 +60,13 @@
 										<li class="menu__item"><a href="production.html" class="menu__link">Виробництво</a>
 											<div class="menu__arrow"></div>
 											<ul class="menu__sublist">
-												<li class="menu__subitem"><a href="productionb.html" class="menu__sublink">Бетону</a></li>
+												<li class="menu__subitem"><a href="productionb.html" class="menu__sublink">Виробництво
+														бетону</a></li>
 												<li class="menu__subitem"><a href="productionpan.html" class="menu__sublink">Виробництво
 														панелей</a></li>
+												<li class="menu__subitem"><a href="#" class="menu__sublink">Залізобетонні конструкції</a>
+												</li>
+												<li class="menu__subitem"><a href="#" class="menu__sublink">Виробництво меблів</a></li>
 											</ul>
 										</li>
 										<li class="menu__item"><a href="new.html" class="menu__link">Новини</a></li>
@@ -78,7 +82,6 @@
 														панельні будинки</a></li>
 											</ul>
 										</li>
-										<li class="menu__item"><a href="#" class="menu__link">Контакти</a></li>
 									</ul>
 									<div class="menu__search"><img src="img/header/search-icon.svg" alt="Search"></div>
 								</nav>
@@ -107,8 +110,12 @@
 												<a href="production.html" class="mobilemenu__link">Виробництво</a>
 												<div class="menu__arrow"></div>
 												<ul class="mobilemenu__sublist">
-													<li class="mobilemenu__subitem"><a href="productionb.html" class="mobilemenu__link">Бетону</a></li>
+													<li class="mobilemenu__subitem"><a href="productionb.html" class="mobilemenu__link">Виробництво бетону</a></li>
 													<li class="mobilemenu__subitem"><a href="productionpan.html" class="mobilemenu__link">Виробництво панелей</a></li>
+													<li class="mobilemenu__subitem"><a href="#" class="mobilemenu__link">Залізобетонні
+															конструкції</a></li>
+													<li class="mobilemenu__subitem"><a href="#" class="mobilemenu__link">Виробництво
+															меблів</a></li>
 												</ul>
 											</li>
 											<li class="mobilemenu__item"><a href="new.html" class="mobilemenu__link">Новини</a></li>
@@ -126,7 +133,6 @@
 															панельні будинки</a></li>
 												</ul>
 											</li>
-											<li class="mobilemenu__item"><a href="#" class="mobilemenu__link">Контакти</a></li>
 										</ul>
 										<div class="mobilemenu__location"><img src="img/header/location-white.svg" alt="location">
 											м. Київ, вул. Бориспільська, 19
@@ -161,7 +167,7 @@
 								<div class="item-topp__title">
 									<h1>Онлайн-каталог</h1>
 								</div>
-								<div class="item-topp__image"><a href="#" class="item-topp__link"><img src="img/topp/catalog.jpg" alt="Catalog"></a></div>
+								<div class="item-topp__image"><a href="https://heyzine.com/flip-book/472f355522.html" target="_blank" class="item-topp__link"><img src="img/topp/catalog.jpg" alt="Catalog"></a></div>
 							</div>
 						</div>
 					</div>
@@ -181,7 +187,7 @@
 											<div class="item-productions__textblock textblock-productions">
 												<div class="textblock-productions__body">
 													<div class="textblock-productions__text">
-														<h3>Виробництво панелей</h3>
+														<h3>Виробництво бетону</h3>
 													</div>
 												</div>
 											</div>
@@ -241,14 +247,16 @@
 					</div>
 				</div>
 			</div>
-			<div class="videop">
-				<div class="videop__container">
-					<div class="videop__body">
-						<div poster="https://zverzor.github.io/aloha/portfolio/B19/video/poster.jpg" class="videop__video"><video controls src="https://zverzor.github.io/aloha/portfolio/B19/video/production.mp4" codecs="h264" type='video/mp4'></video>
-						</div>
-					</div>
-				</div>
-			</div>
+			<!-- <div class="videop">
+   <div class="videop__container">
+      <div class="videop__body">
+         <div poster="https://zverzor.github.io/aloha/portfolio/B19/video/poster.jpg" class="videop__video"><video
+               controls src="https://zverzor.github.io/aloha/portfolio/B19/video/production.mp4" codecs="h264"
+               type='video/mp4'></video>
+         </div>
+      </div>
+   </div>
+</div> -->
 		</main>
 		<footer class="footer">
 			<div class="footer__container">
@@ -302,7 +310,7 @@
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20220611111016"></script>
+	<script src="js/app.min.js?_v=20220611131559"></script>
 </body>
 
 </html>
