--- a/portfolio/B19/about.html
+++ b/portfolio/B19/about.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20220611111016">
+	<link rel="stylesheet" href="css/style.min.css?_v=20220611131559">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -60,9 +60,13 @@
 										<li class="menu__item"><a href="production.html" class="menu__link">Виробництво</a>
 											<div class="menu__arrow"></div>
 											<ul class="menu__sublist">
-												<li class="menu__subitem"><a href="productionb.html" class="menu__sublink">Бетону</a></li>
+												<li class="menu__subitem"><a href="productionb.html" class="menu__sublink">Виробництво
+														бетону</a></li>
 												<li class="menu__subitem"><a href="productionpan.html" class="menu__sublink">Виробництво
 														панелей</a></li>
+												<li class="menu__subitem"><a href="#" class="menu__sublink">Залізобетонні конструкції</a>
+												</li>
+												<li class="menu__subitem"><a href="#" class="menu__sublink">Виробництво меблів</a></li>
 											</ul>
 										</li>
 										<li class="menu__item"><a href="new.html" class="menu__link">Новини</a></li>
@@ -78,7 +82,6 @@
 														панельні будинки</a></li>
 											</ul>
 										</li>
-										<li class="menu__item"><a href="#" class="menu__link">Контакти</a></li>
 									</ul>
 									<div class="menu__search"><img src="img/header/search-icon.svg" alt="Search"></div>
 								</nav>
@@ -107,8 +110,12 @@
 												<a href="production.html" class="mobilemenu__link">Виробництво</a>
 												<div class="menu__arrow"></div>
 												<ul class="mobilemenu__sublist">
-													<li class="mobilemenu__subitem"><a href="productionb.html" class="mobilemenu__link">Бетону</a></li>
+													<li class="mobilemenu__subitem"><a href="productionb.html" class="mobilemenu__link">Виробництво бетону</a></li>
 													<li class="mobilemenu__subitem"><a href="productionpan.html" class="mobilemenu__link">Виробництво панелей</a></li>
+													<li class="mobilemenu__subitem"><a href="#" class="mobilemenu__link">Залізобетонні
+															конструкції</a></li>
+													<li class="mobilemenu__subitem"><a href="#" class="mobilemenu__link">Виробництво
+															меблів</a></li>
 												</ul>
 											</li>
 											<li class="mobilemenu__item"><a href="new.html" class="mobilemenu__link">Новини</a></li>
@@ -126,7 +133,6 @@
 															панельні будинки</a></li>
 												</ul>
 											</li>
-											<li class="mobilemenu__item"><a href="#" class="mobilemenu__link">Контакти</a></li>
 										</ul>
 										<div class="mobilemenu__location"><img src="img/header/location-white.svg" alt="location">
 											м. Київ, вул. Бориспільська, 19
@@ -163,7 +169,8 @@
 								<h3>Ми будуємо наше майбутнє разом!
 								</h3>
 							</div>
-							<div class="col-top-about__button"><a href="#" class="col-top-about__btn button">Каталог продукції</a>
+							<div class="col-top-about__button"><a href="#" class="col-top-about__btn button">Корпоративна
+									презентація</a>
 							</div>
 						</div>
 					</div>
@@ -283,7 +290,7 @@
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20220611111016"></script>
+	<script src="js/app.min.js?_v=20220611131559"></script>
 </body>
 
 </html>
