--- a/portfolio/B19/about.html
+++ b/portfolio/B19/about.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20220611131559">
+	<link rel="stylesheet" href="css/style.min.css?_v=20220611145617">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -169,7 +169,7 @@
 								<h3>Ми будуємо наше майбутнє разом!
 								</h3>
 							</div>
-							<div class="col-top-about__button"><a href="#" class="col-top-about__btn button">Корпоративна
+							<div class="col-top-about__button"><a href="https://heyzine.com/flip-book/b3db5e00c2.html" target="_blank" class="col-top-about__btn button">Корпоративна
 									презентація</a>
 							</div>
 						</div>
@@ -290,7 +290,7 @@
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20220611131559"></script>
+	<script src="js/app.min.js?_v=20220611145617"></script>
 </body>
 
 </html>
