--- a/portfolio/B19/builds.html
+++ b/portfolio/B19/builds.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20220611131559">
+	<link rel="stylesheet" href="css/style.min.css?_v=20220611145617">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -173,6 +173,18 @@
 					</ul>
 					<div class="topb__image">
 						<img src="img/topb/image.png" alt="">
+					</div>
+
+					<div class="topb__block block-topb">
+						<div class="block-topb__body">
+							<div class="block-topb__text">
+								<p><a href="https://heyzine.com/flip-book/692b3ad734.html" target="_blank">Модульні багатоповерхові
+										будинки презентація</a></p>
+							</div>
+							<div class="block-topb__image">
+								<a href="https://heyzine.com/flip-book/692b3ad734.html" target="_blank"><img src="img/topb/catalog.jpg" alt=""></a>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -452,7 +464,7 @@
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20220611131559"></script>
+	<script src="js/app.min.js?_v=20220611145617"></script>
 </body>
 
 </html>
