--- a/portfolio/B19/modules.html
+++ b/portfolio/B19/modules.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20220611131559">
+	<link rel="stylesheet" href="css/style.min.css?_v=20220611145617">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -183,32 +183,40 @@
 					<div class="typesm_body">
 						<div class="typesm__row row-typesm">
 							<div class="row-typesm__item item-typesm">
-								<div class="item-typesm__body">
-									<div class="item-typesm__image">
-										<a href="#"><img src="img/typesm/item01.jpg" alt=""></a>
-										<div class="item-typesm__textblock textblock-typesm">
-											<div class="textblock-typesm__body">
-												<div class="textblock-typesm__text">
-													<h3><a href="#">Збірні модульні будинки MODO</a></h3>
+								<a href="modo.html">
+									<div class="item-typesm__body">
+										<div class="item-typesm__image">
+											<a href="modo.html"><img src="img/typesm/item01.jpg" alt=""></a>
+											<a href="modo.html">
+												<div class="item-typesm__textblock textblock-typesm">
+													<div class="textblock-typesm__body">
+														<div class="textblock-typesm__text">
+															<h3>Збірні модульні будинки MODO</h3>
+														</div>
+													</div>
 												</div>
-											</div>
+											</a>
 										</div>
 									</div>
-								</div>
+								</a>
 							</div>
 							<div class="row-typesm__item item-typesm">
-								<div class="item-typesm__body">
-									<div class="item-typesm__image">
-										<a href="#"><img src="img/typesm/item02.jpg" alt=""></a>
-										<div class="item-typesm__textblock textblock-typesm">
-											<div class="textblock-typesm__body">
-												<div class="textblock-typesm__text">
-													<h3><a href="#">Багатоповерхові панельні будинки</a></h3>
+								<a href="builds.html">
+									<div class="item-typesm__body">
+										<div class="item-typesm__image">
+											<a href="modo.html"><img src="img/typesm/item02.jpg" alt=""></a>
+											<a href="builds.html">
+												<div class="item-typesm__textblock textblock-typesm">
+													<div class="textblock-typesm__body">
+														<div class="textblock-typesm__text">
+															<h3>Багатоповерхові панельні будинки</h3>
+														</div>
+													</div>
 												</div>
-											</div>
+											</a>
 										</div>
 									</div>
-								</div>
+								</a>
 							</div>
 							<div class="row-typesm__item item-typesm">
 								<div class="item-typesm__body">
@@ -278,7 +286,7 @@
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20220611131559"></script>
+	<script src="js/app.min.js?_v=20220611145617"></script>
 </body>
 
 </html>
