--- a/portfolio/B19/index.html
+++ b/portfolio/B19/index.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20220611145617">
+	<link rel="stylesheet" href="css/style.min.css?_v=20220611164007">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -170,7 +170,7 @@
 								</p>
 							</div>
 							<div class="col-top-main__button">
-								<a href="#" class="col-top-main__btn button">Детальніше</a>
+								<a href="about.html" class="col-top-main__btn button">Детальніше</a>
 							</div>
 						</div>
 					</div>
@@ -228,7 +228,7 @@
 			<div class="videomain">
 				<div class="videomain__container">
 					<div class="videomain__body">
-						<div poster="https://zverzor.github.io/aloha/portfolio/B19/video/poster.jpg" class="videomain__video"><video controls src="https://zverzor.github.io/aloha/portfolio/B19/video/videomain.mp4" codecs="h264" type='video/mp4'></video>
+						<div poster="https://zverzor.github.io/aloha/portfolio/B19/video/poster.jpg" class="videomain__video"><video controls src="https://zverzor.github.io/aloha/portfolio/B19/video/videomain.mp4" autoplay muted codecs="h264" type='video/mp4'></video>
 						</div>
 					</div>
 				</div>
@@ -236,7 +236,7 @@
 			<div class="newlvl">
 				<div class="newlvl__container">
 					<div class="newlvl__body">
-						<div class="newlvl__frame"></div>
+						<!-- <div class="newlvl__frame"></div> -->
 						<div class="newlvl__text">
 							<p>Ми любимо нашу країну ! Віримо у велич нашої нації. Використовуючи
 								останні світові досягнення в галузі будівництва ми хочемо принести
@@ -366,7 +366,7 @@
 										<div class="form-footer__title">
 											<h3>Надіслати повідомлення</h3>
 										</div>
-										<input autocomplete="off" type="text" name="form[]" data-error="Ошибка" placeholder="Ваще имя" class="form-footer__name">
+										<input autocomplete="off" type="text" name="form[]" data-error="Ошибка" placeholder="Ваше имя" class="form-footer__name">
 										<input autocomplete="off" type="tel" name="form[]" data-error="Ошибка" placeholder="Ваш телефон" class="form-footer__mobile">
 										<input autocomplete="off" type="email" name="form[]" data-error="Ошибка" placeholder="E-mail" class="form-footer__email">
 										<textarea class="form-footer__textarea" placeholder="Повідомлення" name="" id="" cols=" 30" rows="5"></textarea>
@@ -407,7 +407,7 @@
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20220611145617"></script>
+	<script src="js/app.min.js?_v=20220611164007"></script>
 </body>
 
 </html>
