--- a/portfolio/B19/builds.html
+++ b/portfolio/B19/builds.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20220611145617">
+	<link rel="stylesheet" href="css/style.min.css?_v=20220611164007">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -285,22 +285,12 @@
 								</div>
 								<div class="slidermb__slide swiper-slide">
 									<div class="slide-slidermb__body">
-										<img src="img/slidermb/slide.jpg" alt="">
+										<img src="img/slidermb/slide2.jpeg" alt="">
 									</div>
 								</div>
 								<div class="slidermb__slide swiper-slide">
 									<div class="slide-slidermb__body">
-										<img src="img/slidermb/slide.jpg" alt="">
-									</div>
-								</div>
-								<div class="slidermb__slide swiper-slide">
-									<div class="slide-slidermb__body">
-										<img src="img/slidermb/slide.jpg" alt="">
-									</div>
-								</div>
-								<div class="slidermb__slide swiper-slide">
-									<div class="slide-slidermb__body">
-										<img src="img/slidermb/slide.jpg" alt="">
+										<img src="img/slidermb/slide3.jpeg" alt="">
 									</div>
 								</div>
 
@@ -423,7 +413,7 @@
 										<div class="form-footer__title">
 											<h3>Надіслати повідомлення</h3>
 										</div>
-										<input autocomplete="off" type="text" name="form[]" data-error="Ошибка" placeholder="Ваще имя" class="form-footer__name">
+										<input autocomplete="off" type="text" name="form[]" data-error="Ошибка" placeholder="Ваше имя" class="form-footer__name">
 										<input autocomplete="off" type="tel" name="form[]" data-error="Ошибка" placeholder="Ваш телефон" class="form-footer__mobile">
 										<input autocomplete="off" type="email" name="form[]" data-error="Ошибка" placeholder="E-mail" class="form-footer__email">
 										<textarea class="form-footer__textarea" placeholder="Повідомлення" name="" id="" cols=" 30" rows="5"></textarea>
@@ -464,7 +454,7 @@
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20220611145617"></script>
+	<script src="js/app.min.js?_v=20220611164007"></script>
 </body>
 
 </html>
