--- a/portfolio/B19/eco.html
+++ b/portfolio/B19/eco.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20220611145617">
+	<link rel="stylesheet" href="css/style.min.css?_v=20220611164007">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -240,7 +240,7 @@
 										<div class="form-footer__title">
 											<h3>Надіслати повідомлення</h3>
 										</div>
-										<input autocomplete="off" type="text" name="form[]" data-error="Ошибка" placeholder="Ваще имя" class="form-footer__name">
+										<input autocomplete="off" type="text" name="form[]" data-error="Ошибка" placeholder="Ваше имя" class="form-footer__name">
 										<input autocomplete="off" type="tel" name="form[]" data-error="Ошибка" placeholder="Ваш телефон" class="form-footer__mobile">
 										<input autocomplete="off" type="email" name="form[]" data-error="Ошибка" placeholder="E-mail" class="form-footer__email">
 										<textarea class="form-footer__textarea" placeholder="Повідомлення" name="" id="" cols=" 30" rows="5"></textarea>
@@ -281,7 +281,7 @@
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20220611145617"></script>
+	<script src="js/app.min.js?_v=20220611164007"></script>
 </body>
 
 </html>
