--- a/portfolio/B19/modo.html
+++ b/portfolio/B19/modo.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20220611145617">
+	<link rel="stylesheet" href="css/style.min.css?_v=20220611164007">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -288,7 +288,10 @@
 												<img src="img/modulebasa/slide.jpg" alt="">
 											</div>
 											<div class="modulebasa__slide swiper-slide">
-												<img src="img/modulebasa/slide.jpg" alt="">
+												<img src="img/modulebasa/slide2.jpeg" alt="">
+											</div>
+											<div class="modulebasa__slide swiper-slide">
+												<img src="img/modulebasa/slide3.jpeg" alt="">
 											</div>
 										</div>
 										<div class="swiper-pagination"></div>
@@ -321,7 +324,7 @@
 												<img src="img/modulebadroom/slide.jpg" alt="">
 											</div>
 											<div class="modulebadroom__slide swiper-slide">
-												<img src="img/modulebadroom/slide.jpg" alt="">
+												<img src="img/modulebadroom/slide2.jpeg" alt="">
 											</div>
 										</div>
 										<div class="swiper-pagination"></div>
@@ -376,7 +379,7 @@
 												<img src="img/modulebaby/slide.jpg" alt="">
 											</div>
 											<div class="modulebaby__slide swiper-slide">
-												<img src="img/modulebaby/slide.jpg" alt="">
+												<img src="img/modulebaby/slide2.jpeg" alt="">
 											</div>
 										</div>
 										<div class="swiper-pagination"></div>
@@ -529,7 +532,7 @@
 										<div class="form-footer__title">
 											<h3>Надіслати повідомлення</h3>
 										</div>
-										<input autocomplete="off" type="text" name="form[]" data-error="Ошибка" placeholder="Ваще имя" class="form-footer__name">
+										<input autocomplete="off" type="text" name="form[]" data-error="Ошибка" placeholder="Ваше имя" class="form-footer__name">
 										<input autocomplete="off" type="tel" name="form[]" data-error="Ошибка" placeholder="Ваш телефон" class="form-footer__mobile">
 										<input autocomplete="off" type="email" name="form[]" data-error="Ошибка" placeholder="E-mail" class="form-footer__email">
 										<textarea class="form-footer__textarea" placeholder="Повідомлення" name="" id="" cols=" 30" rows="5"></textarea>
@@ -570,7 +573,7 @@
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20220611145617"></script>
+	<script src="js/app.min.js?_v=20220611164007"></script>
 </body>
 
 </html>
